fix overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,7 @@ h3 {
   background-size: cover !important;
   position: absolute;
   width: 100%;
+  overflow: hidden;
 }
 
 .slider_area {
@@ -615,6 +616,8 @@ h3 {
 @media (min-width: 768px) and (max-width: 991px) {
   .slider_area .single_slider {
     height: 100vh;
+    width: 100vw;
+    overflow: hidden;
   }
 }
 
